--- a/index.html
+++ b/index.html
@@ -69,11 +69,10 @@ footer{padding:2rem;text-align:center;font-size:.75rem;color:var(--text-secondar
   </div>
   <hr>
   <div class="about" id="about">
-    <p>I build measurement frameworks and statistical models for electronic trading systems. At OneChronos, I work on execution quality analytics, product research, and algorithm development for a periodic batch auction venue with expressive bidding, a mechanism that lets traders encode combinatorial preferences over multi-asset executions.</p>
-    <p>Most of my work involves writing causal and statistical analyses on large-scale trade data, designing metrics that quantify venue performance for institutional clients, and building optimization systems for algorithmic execution.</p>
-    <p>Previously at JPMorgan (Onyx/JPM Coin), Citigroup (leveraged lending ML), Stanford (medical imaging), and NASA JPL (seismic classification). Mathematics at Caltech.</p>
+   <p> I build causal and statistical analysis frameworks for large-scale trading data. I use those frameworks to design novel trading modalities for institutional algorithmic execution. </p>.
+    <p>I studied math at Caltech, worked in machine learning research at the NASA Jet Propulsion Laboratory and later Stanford University School of Medicine.</p>
     <div class="skills-row">
-      <span>Python</span><span>SQL</span><span>Polars</span><span>ClickHouse</span><span>Altair</span><span>Causal Inference</span><span>Experimental Design</span><span>Market Microstructure</span><span>Mechanism Design</span><span>Stochastic Control</span>
+      <span>Statistics</span> <span>Stochastic Predictive Control</span><span>Reinforcement Learning/span>
     </div>
   </div>
   <hr>
