--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ footer{padding:2rem;text-align:center;font-size:.75rem;color:var(--text-secondar
   </div>
   <hr>
   <div class="about" id="about">
-   <p> I build causal and statistical analysis frameworks for large-scale trading data. I use those frameworks to design novel trading modalities for institutional algorithmic execution. </p>.
+   <p> I build causal and statistical analysis frameworks for large-scale trading data. I use those frameworks to design novel trading modalities for institutional algorithmic execution. </p>
     <p>I studied math at Caltech, worked in machine learning research at the NASA Jet Propulsion Laboratory and later Stanford University School of Medicine.</p>
     <div class="skills-row">
       <span>Statistics</span> <span>Stochastic Predictive Control</span><span>Reinforcement Learning/span>
