--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ footer{padding:2rem;text-align:center;font-size:.75rem;color:var(--text-secondar
    <p> I build statistical frameworks for large-scale trading data. I use those frameworks to design novel bidding techniques for institutional algorithmic execution. </p>
     <p>My academic background is in mathematics, control theory, and control-based learning.</p>
     </div>
+    </div>
   </div>
   <hr>
   <div class="blog" id="writing">
