--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@ footer{padding:2rem;text-align:center;font-size:.75rem;color:var(--text-secondar
   </div>
   <hr>
   <div class="about" id="about">
-   <p> I build statistical frameworks for large-scale trading data. I use those frameworks to design novel bidding techniques for institutional algorithmic execution. </p>
+   <p> I build statistical frameworks for analysis of large-scale trading data. I use those frameworks to design novel bidding techniques for institutional algorithmic execution. </p>
     <p>My academic background is in mathematics, control theory, and control-based learning.</p>
-       <p>Some institutions which in the past have supported my research:</p>
+       <p>Institutions which in the past have supported my research:</p>
     <div class="skills-row">
       <span>California Institute of Technology</span> <span>NASA Jet Propulsion Laboratory</span><span>Stanford University School of Medicine</span><span>Princeton Plasma Physics Laboratory</span>
     </div>
